syntax = "proto3";
package bounding;

message BoundingBox {
  int32 xmin = 1;
  int32 ymin = 2;
  int32 xmax = 3;
  int32 ymax = 4;
}
