syntax = "proto3";
package item;

import "utils.proto";

message ItemResponse {
  int32 id = 1;
  int32 x = 2;
  int32 y = 3;
  int32 w = 4;
  int32 h = 5;
  optional string name = 6;
  optional string schema = 7;
}

message ItemListResponse {
  repeated ItemResponse item_response = 1;
}

service Item {
  rpc NearbyItems(utils.BoundingBox) returns (ItemListResponse) {}
}
